<resources>
    <string name="app_name">Fit Workout</string>

    <!-- Bottom Navigation Bar -->
    <string name="bottom_nav_calendario">Calendário</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_historico">Histórico</string>

    <!-- App Bar Navigation -->
    <string name="appbar_settings">Settings</string>
    <string name="appbar_change_account">Change Account</string>
    <string name="appbar_encomendas">Encomendas</string>
    <string name="appbar_exercicios">Exercícios</string>
    <string name="appbar_chat">Chat</string>

    <!--  Login Activity  -->
    <string name="login_tv_login">Login</string>
    <string name="login_tv_username">Username</string>
    <string name="login_tv_password">Password</string>
    <string name="login_btn_to_register">Don\'t have an Account? Sign up.</string>
    <string name="login_btn_login">Login</string>

    <!--  Register Activity  -->
    <string name="register_tv_register">Register</string>
    <string name="register_tv_email">Email</string>
    <string name="register_tv_username">Username</string>
    <string name="register_tv_password">Password</string>
    <string name="register_tv_confirm_password">Confirm Password</string>
    <string name="register_btn_to_login">Already have an Account? Sign in.</string>
    <string name="register_btn_register">Register</string>

    <!-- Calendar Fragment -->
    <string name="calendar_date">Data: %1$d/%2$d/%3$d</string>
</resources>
